# the-blue-alliance

./: .babelrc  .coveragerc  .dockerignore  .eslintignore  .eslintrc.js  .flake8  .gcloudignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pyre_configuration  .python-version  .test_durations  .travis.yml  AGENTS.md  LICENSE.md  LICENSE.txt  Makefile  README  README.md  README.textile  Vagrantfile  admin_main.py  api.yaml  api_main.py  apiv3_main.py  app-backend-tasks-b2.yaml  app-backend-tasks.yaml  app.yaml  app_shared.yaml  appengine_config.py  backend_main.py  backend_main_b2.py  bootstrap.py  bulkloader.yaml  clientapi.yaml  compile_jinja2_templates.py  copilot-setup-steps.yml  cron.yaml  (+57 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codeql_config.yml  dependabot.yaml  dependabot.yml
api/: apiv3_main.py
cache-worker/: README.md  index.js  package.json  wrangler.toml
cache_clearer/: cache_clearer.py
clientapi/: clientapi_service.py
cloudstorage/: cloudstorage_api.py  rest_api.py  storage_api.py
common/: my_filters.py  tba_key_name_validators.py
consts/: account_permissions.py  auth_type.py  award_type.py  client_type.py  district_point_values.py  district_type.py  event_type.py  gameday_layout_type.py  gameday_pref_types.py  gcm.py  media_tag.py  media_type.py  model_type.py  notification_type.py  playoff_type.py  push.py  ranking_indexes.py  social_connection_type.py
context_cache/: context_cache.py
controllers/: account_controller.py  advanced_search_controller.py  ajax_controller.py  api_controller.py  apiai_controller.py  apidocs_controller.py  auth_controller.py  backup_controller.py  base_controller.py  cron_controller.py  datafeed_controller.py  district_controller.py  event_controller.py  event_wizard_controller.py  firebase_controller.py  gameday2_controller.py  gameday_controller.py  insights_controller.py  main_controller.py  match_controller.py  match_suggestion_controller.py  match_timeline_controller.py  mobile_controller.py  mytba_controller.py  nearby_controller.py  nightbot_controller.py  notification_controller.py  rankings_controller.py  short_controller.py  slack_controller.py  team_admin_controller.py  team_controller.py  test_notification_controller.py  webhook_controller.py
css/: admin.css  style.css
database/: award_query.py  database_query.py  district_query.py  event_query.py  gdcv_data_query.py  get_affected_queries.py  match_query.py  media_query.py  robot_query.py  team_query.py
datafeeds/: csv_advancement_parser.py  csv_alliance_selections_parser.py  csv_awards_parser.py  csv_teams_parser.py  datafeed_base.py  datafeed_first_elasticsearch.py  datafeed_fms.py  datafeed_fms_api.py  datafeed_helper.py  (+48 more)
(+6173 files in other folders)
